# aio-easy-rabbit

./: LICENSE  README.md  example.py  fastapi_example.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
aio_easy_rabbit/: decorators.py  producers.py
src/fastapi_rabbitmq_middleware/: connection.py  consumer_registry.py  decorators.py
