
[project]
version="0.0.1"
name="aio-easy-rabbit"
description="A simple rabbitmq client for asyncio applications based on the awesome aio-pika library!"
authors = [{ name = "Bo Stokholm", email = "the.one.nachash@gmail.com" }]
readme = "README.md"
requires-python = ">3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.license]
file = "LICENSE"


[project.urls]
"Homepage" = "https://github.com/mcboman/aio-easy-rabbit"
"Bug Tracker" = "https://github.com/mcboman/aio-easy-rabbit/issues"


[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

